@@ -1015,4 +1015,10 @@ Failed: invalid UTF-16 string at offset 0
     \x{a0}\x20!
  0: \x{a0} !
 
+/(*UTF)abc/9
+Failed: setting UTF is disabled by the application at offset 0
+
+/abc/89
+Failed: setting UTF is disabled by the application at offset 0
+
 /-- End of testinput18 --/
